# outdoor_bot

./: CMakeLists.txt  CMakeListsCATKIN.txt  LICENSE  README.md  manifest.xml  package.xml  udev_rule_for_multiple_hokuyos
arduino/eBike/: config.h  core.h  dac.h  eBike.ino  encoderSPI.h  gyro.h  motionDAC.h  motionPD.h  motionServos.h  motorDAC.h  motorPD.h  pidControl.h  radio.h  sensors.h
eBike/: batMon.h  config.h  eBike.ino  gyro.h  motionDAC.h  motionPD.h  motionServos.h  motorDAC.h  pidControl.h  radio.h  sensors.h  servosP.h
include/: digcams.h  outdoor_bot_defines.h  servo_numbers.h
include/FBFSM/: FBFSM.h  outdoor_bot_FBFSM.h
include/navigation/: DirAntFollower.h  NavUtils.h  ObstacleDetector.h  WallFollower.h
include/rcmRadar/: radar.h  rcmIf.c  rcmIf.h
launch/: boot.launch  dir_ant_follower.launch  mapview.launch  obstacle.launch  outdoor.launch  outdoor_bootState.launch  testMove.launch
launch/includes/: cameras.launch  hokuyo_outdoor.launch  robot_state_publisher_outdoor.launch  static_transform_publisher.launch
launch/includes/serialComm/: serialComm_outdoor.launch
maps/: blank_map_4000_2325.yaml  field_map.yaml  platform_map_4000_2325.xcf  platform_map_4000_2325.yaml
msg/: NavTargets_msg.msg  ObstacleDetectorFeedback_msg.msg  ObstacleParams_msg.msg  autoMove_msg.msg  digcams_custom.msg  dirAnt_msg.msg  mainTargetsCommand_msg.msg  mainTargets_imageReceived_msg.msg  mainTargets_msg.msg  movement_msg.msg  navTargetsCommand_msg.msg  pmotor_msg.msg  radar_msg.msg  servo_msg.msg  webcams_custom.msg
nodes/: NavTargets.cpp  autonomous_node.cpp  autonomous_node_obstacle_testing.cpp  baseController_node.cpp  commandsController_node.cpp  copyautonomous_node.cpp  digcams.cpp  dirAnt_node.cpp  image_cvproc.cpp  imagecv.cpp  keyboardController_node.cpp  mainTargets.cpp  movement_node.cpp  obstacle_avoider_tester_node.cpp  obstacle_node.cpp  obstacle_tester_node.cpp  obstacles_service_node.cpp  patrol_node.cpp  radar_node.cpp  radar_ranging_node.cpp  republish_scan_node.cpp  robotPose_node.cpp  sensors_node.cpp  serialComm_node.cpp  userCommandNode.cpp  userCommands_node.cpp  webcams.cpp
param/: base_local_planner_params_outdoor.NEW  base_local_planner_params_outdoor.OLD  base_local_planner_params_outdoor.yaml  costmap_common_params_outdoor.yaml  global_costmap_params.yaml  hokuyo_params_for_costmap_common  kaijen_DWAPlanner_parameters  local_costmap_params.yaml
src/: blob_detector.cpp  robustMatcher.h  simple_blobs.cpp
src/FBFSM/: FBFSM.cpp  outdoor_bot_FBFSM.cpp
src/navigation/: DirAntFollower.cpp  NavUtils.cpp  ObstacleDetector.cpp  WallFollower.cpp
src/outdoor_bot/msg/: _NavTargets_msg.py  __init__.py  _digcams_custom.py  _mainTargetsCommand_msg.py  _mainTargets_imageReceived_msg.py  _mainTargets_msg.py  _movement_msg.py  _pmotor_msg.py  _servo_msg.py  _webcams_custom.py
src/outdoor_bot/srv/: _NavTargets_service.py  __init__.py  _digcams_service.py  _dirAnt_service.py  _encoders_service.py  _mainTargets_service.py  _radar_service.py  _servos_service.py  _setPose_service.py
src/rcmRadar/: radar.cpp  rcm.c  rcmIf.c
srv/: accelerometers_service.srv  autoMove_service.srv  digcams_service.srv  dirAnt_service.srv  encoders_service.srv  mainTargets_service.srv  obstacle_service.srv  radar_service.srv  servos_service.srv  setPose_service.srv
urdf/: outdoor_bot.urdf  test.urdf
